# MMKV

Core/: BUILD.gn  MMKV_IO.cpp
POSIX/: BUILD.gn
POSIX/demo/: BUILD.gn  demo.cpp
POSIX/src/: BUILD.gn
